src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>NCV1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCV2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCV3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCV4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCV5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCV6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCV7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCW1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCW2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCW3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NMA0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NMA1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NMA2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NMA3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NMA4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NMW1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NMW2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NMW3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NNE0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NNE1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NNE2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NNE3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NNE4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NNE5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYM1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYM2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYM3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAS0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCV1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCV2</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Relationship_Index__c</fullName>
        <label>Relationship Index</label>
        <picklist>
            <picklistValues>
                <fullName>Competitive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>St. Jude Friendly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Remote_Connect_Use__c</fullName>
        <label>Remote Connect Use</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SAN_NAS_Archive__c</fullName>
        <label>SAN / NAS Archive</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SJM_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SJM ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Search_1__c</fullName>
        <inlineHelpText>Account Unique Identifier in Salesforce</inlineHelpText>
        <label>Search 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_2__c</fullName>
        <description>Uniquely Identifies &amp; Searchable the Account Name</description>
        <inlineHelpText>Account Unique Identifier in Salesforce</inlineHelpText>
        <label>Search 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_GPO_Affiliations__c</fullName>
        <label>Secondary GPO Affiliations</label>
        <picklist>
            <picklistValues>
                <fullName>Amerinet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Novation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared Clarity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VHA</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Service_Contract_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Service Contract Specialist</description>
        <inlineHelpText>Service Contract Specialist responsible to followup the Customers</inlineHelpText>
        <label>Service Contract Specialist</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>Customer Service - Inside Sales</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountsServiceContractSpecialist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Society_Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Society_City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Society_Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Society_Frequency__c</fullName>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Society_Is_SJM_a_member_of_the_society__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is SJM a member of the society?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Society_Journal_Impact_Factor__c</fullName>
        <label>Journal Impact Factor</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Society_Journal__c</fullName>
        <label>Journal</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Society_State_Providence__c</fullName>
        <label>State/Providence</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Society_Target_Customer__c</fullName>
        <label>Target Customer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Society_Total_Membership__c</fullName>
        <label>Total Membership</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>St_Jude_Market_Share__c</fullName>
        <formula>IF(OR(Total_Market_Opportunity__c = 0, AnnualRevenue = 0), 0, AnnualRevenue / Total_Market_Opportunity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>St. Jude Annual Revenue / Total Market Opportunity</inlineHelpText>
        <label>St. Jude Market Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the Account</description>
        <inlineHelpText>Status</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>ARCHD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In-Active</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strategic_Account__c</fullName>
        <label>Strategic Account</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strategic_Plans_for_the_Account__c</fullName>
        <label>Strategic Plans for the Account</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Street_City_State_Zip__c</fullName>
        <description>Used within the search results of the Account field for FIT mobile</description>
        <label>Street City State Zip</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplies_Used_Report_Integration__c</fullName>
        <label>Supplies Used Report Integration</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sutureless_Number_of_Procedures_PA__c</fullName>
        <label>Sutureless Number of Procedures PA</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Physicians__c</fullName>
        <inlineHelpText>Use this field to list specific physicians your business unit is targeting.  Add the physicians name and your business unit acronym after their name; this way if multiple businesses are targeting the same physician their name is only listed once.</inlineHelpText>
        <label>Target Physicians</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Teaching_Hospital__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Teaching Hospital?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tender_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tender Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tenders__c</fullName>
        <inlineHelpText>List all tenders which impact product usage at this account</inlineHelpText>
        <label>Tenders</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Territory_Manager_AF_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This Field displays the name of the Territory Manager assigned to this account for the AF Division.</inlineHelpText>
        <label>Territory Manager - AF 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_Manager_AF_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Field displays the name of the Territory Manager assigned to this account for the AF Division.</description>
        <inlineHelpText>This Field displays the name of the Territory Manager assigned to this account for the AF Division.</inlineHelpText>
        <label>Territory Manager - AF 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountsCZMq</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_Manager_CRM_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Field displays the name of the Territory Manager assigned to this account for the CRM Division.</description>
        <inlineHelpText>This Field displays the name of the Territory Manager assigned to this account for the CRM Division.</inlineHelpText>
        <label>Territory Manager - CRM 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_Manager_CRM_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Field displays the name of the Territory Manager assigned to this account for the CRM Division.</description>
        <inlineHelpText>This Field displays the name of the Territory Manager assigned to this account for the CRM Division.</inlineHelpText>
        <label>Territory Manager - CRM 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_Manager_CRM_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Field displays the name of the Territory Manager assigned to this account for the CRM Division.</description>
        <inlineHelpText>This Field displays the name of the Territory Manager assigned to this account for the CRM Division.</inlineHelpText>
        <label>Territory Manager - CRM 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_Manager_CSD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Field displays the name of the Territory Manager assigned to this account for the CSD Division.</description>
        <inlineHelpText>This Field displays the name of the Territory Manager assigned to this account for the CSD Division.</inlineHelpText>
        <label>Territory Manager - CSD</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_Manager_NMD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This Field displays the name of the Territory Manager assigned to this account for the NMD Division.</inlineHelpText>
        <label>Territory Manager - NMD</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_Manager_SI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Field displays the name of the Territory Manager assigned to this account for the Structural Intervention Division</description>
        <inlineHelpText>This Field displays the name of the Territory Manager assigned to this account for the Structural Intervention Division</inlineHelpText>
        <label>Territory Manager - SI</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_Manager_Vascular_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Field displays the name of the Territory Manager assigned to this account for the Vascular Division.</description>
        <inlineHelpText>This Field displays the name of the Territory Manager assigned to this account for the Vascular Division.</inlineHelpText>
        <label>Territory Manager Vascular 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountsGBdC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_Manager_Vascular__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Field displays the name of the Territory Manager assigned to this account for the Vascular Division.</description>
        <inlineHelpText>This Field displays the name of the Territory Manager assigned to this account for the Vascular Division.</inlineHelpText>
        <label>Territory Manager Vascular</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Market_Opportunity__c</fullName>
        <label>Total Market Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Twitter__c</fullName>
        <label>Twitter</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>USD_AF_Area__c</fullName>
        <description>AF Area</description>
        <label>USD AF Area</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_AF_Division__c</fullName>
        <description>AF Division</description>
        <label>USD AF Division</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_AF_Region__c</fullName>
        <description>AF Region</description>
        <label>USD AF Region</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_ANS_Area__c</fullName>
        <description>ANS Area</description>
        <label>USD ANS Area</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_ANS_Division__c</fullName>
        <description>ANS Division</description>
        <label>USD ANS Division</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_ANS_Region__c</fullName>
        <description>ANS Region</description>
        <label>USD ANS Region</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_DBS_Area__c</fullName>
        <description>DBS Product Line Area</description>
        <inlineHelpText>DBS Product Line Area</inlineHelpText>
        <label>USD DBS Area</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_DBS_Division__c</fullName>
        <description>DBS Product Line Division</description>
        <inlineHelpText>DBS Product Line Division</inlineHelpText>
        <label>USD DBS Division</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_DBS_Region__c</fullName>
        <description>DBS Product Line Region</description>
        <inlineHelpText>DBS Product Line Region</inlineHelpText>
        <label>USD DBS Region</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_HFM_Area__c</fullName>
        <description>HFM Area</description>
        <label>USD HFM Area</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_HFM_Division__c</fullName>
        <description>HFM Division</description>
        <label>USD HFM Division</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_HFM_Region__c</fullName>
        <description>HFM Region</description>
        <label>USD HFM Region</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_VAS_Area__c</fullName>
        <description>VAS Area</description>
        <label>USD VAS Area</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_VAS_Division__c</fullName>
        <description>VAS Division</description>
        <label>USD VAS Division</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_VAS_Region__c</fullName>
        <description>VAS Region</description>
        <label>USD VAS Region</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>University_Affiliation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>University Affiliation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_Credentialing_Agency__c</fullName>
        <label>Vendor Credentialing Agency</label>
        <picklist>
            <picklistValues>
                <fullName>Reptrax/IntelliCentrics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendormate/GHX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VCS/symplr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parallon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institution Specific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>YouTube__c</fullName>
        <label>YouTube</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>of_Cardiology_Fellows_in_Program__c</fullName>
        <label># of Cardiology  Fellows in Program</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_EP_Fellows_in_Program__c</fullName>
        <label># of EP  Fellows in Program</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>ALL_Accounts_HFM</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Search_1__c</columns>
        <columns>Search_2__c</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.ADDRESS1_COUNTRY</field>
            <operation>equals</operation>
            <value>US</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>DO NOT USE</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>ARCHD</value>
        </filters>
        <filters>
            <field>CMReorderAccount__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>ALL Accounts - HFM</label>
        <sharedTo>
            <roleAndSubordinates>SVP_HFM</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Account_Groups</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Account_Group</value>
        </filters>
        <label>Account Groups</label>
    </listViews>
    <listViews>
        <fullName>All_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Region__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Search_2__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>DO NOT USE</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>ARCHD</value>
        </filters>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_Accounts_Canada</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>CA_AF_Region__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.ADDRESS1_COUNTRY</field>
            <operation>equals</operation>
            <value>CA</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>DO NOT USE</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>ARCHD</value>
        </filters>
        <label>All Accounts - Canada</label>
    </listViews>
    <listViews>
        <fullName>All_Germany_Accounts</fullName>
        <columns>Search_2__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Search_1__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.ADDRESS1_COUNTRY</field>
            <operation>contains</operation>
            <value>DE</value>
        </filters>
        <label>All Germany Accounts</label>
        <sharedTo>
            <role>ID_Sales</role>
            <role>ID_Sales_Mgr_Germany</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_UK_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Search_1__c</columns>
        <columns>Search_2__c</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.ADDRESS1_COUNTRY</field>
            <operation>equals</operation>
            <value>GB</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>ARCHD</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>DO NOT USE</value>
        </filters>
        <label>All UK Accounts</label>
        <sharedTo>
            <roleAndSubordinates>ID_Sales</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DBS_All_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>Primary_GPO_Affiliation__c</columns>
        <columns>SJM_ID__c</columns>
        <columns>Search_1__c</columns>
        <columns>Search_2__c</columns>
        <columns>ACCOUNT.PHONE2</columns>
        <columns>IDN__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DBS_Site__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS1_COUNTRY</field>
            <operation>equals</operation>
            <value>US</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>ARCHD</value>
        </filters>
        <label>DBS: All Accounts</label>
        <sharedTo>
            <role>VP_Marketing_Neuro</role>
            <roleAndSubordinates>GM_Neuro</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Search_1__c</columns>
        <columns>Search_2__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
</CustomObject>